--- a/app/src/main/res/layout/activity_location_details.xml
+++ b/app/src/main/res/layout/activity_location_details.xml
@@ -197,4 +197,41 @@
         app:layout_constraintStart_toEndOf="@+id/LongitudeLabel"
         app:layout_constraintTop_toBottomOf="@+id/LatitudeText" />
 
+    <Spinner
+        android:id="@+id/ItemSpinner"
+        android:layout_width="313dp"
+        android:layout_height="22dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ItemSpinnerTextView" />
+
+    <TextView
+        android:id="@+id/ItemSpinnerTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:text="@string/item_list"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/LongitudeText" />
+
+    <Button
+        android:id="@+id/ViewItemButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:onClick="onViewItemOnPress"
+        android:text="@string/view_item"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ItemSpinner" />
+
 </android.support.constraint.ConstraintLayout>
