--- a/app/src/main/res/layout/activity_location_details.xml
+++ b/app/src/main/res/layout/activity_location_details.xml
@@ -226,12 +226,22 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
         android:onClick="onViewItemOnPress"
         android:text="@string/view_item"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ItemSpinner" />
+
+    <Button
+        android:id="@+id/LocationDetailBackButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:onClick="onLocationDetailsBackButtonOnPress"
+        android:text="@string/back"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.298"
+        app:layout_constraintStart_toEndOf="@+id/ViewItemButton"
         app:layout_constraintTop_toBottomOf="@+id/ItemSpinner" />
 
 </android.support.constraint.ConstraintLayout>
