--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -59,7 +59,7 @@
         android:id="@+id/LoadDataButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="108dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="4dp"
         android:onClick="onLoadDataOnPressed"
         android:text="@string/load_data"
@@ -72,12 +72,23 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="4dp"
-        android:layout_marginEnd="8dp"
         android:onClick="onSaveDataOnPressed"
         android:text="@string/save_data"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.388"
         app:layout_constraintStart_toEndOf="@+id/LoadDataButton"
+        app:layout_constraintTop_toBottomOf="@+id/registration" />
+
+    <Button
+        android:id="@+id/ClearDataButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="8dp"
+        android:onClick="onClearDataOnPressed"
+        android:text="@string/clear_data"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.384"
+        app:layout_constraintStart_toEndOf="@+id/SaveDataButton"
         app:layout_constraintTop_toBottomOf="@+id/registration" />
 
 </android.support.constraint.ConstraintLayout>
