--- a/app/src/main/res/layout/activity_item_search_by_name.xml
+++ b/app/src/main/res/layout/activity_item_search_by_name.xml
@@ -40,7 +40,7 @@
         app:layout_constraintTop_toBottomOf="@+id/ItemSearchByNameBackButton" />
 
     <Spinner
-        android:id="@+id/SpinnerItemSearchByName"
+        android:id="@+id/SpinnerLocationItemSearchByName"
         android:layout_width="272dp"
         android:layout_height="23dp"
         android:layout_marginStart="8dp"
@@ -53,10 +53,25 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:onClick="onViewItemDetailsFromNameSearchOnPress"
         android:text="@string/view_item"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="152dp" />
+        app:layout_constraintTop_toBottomOf="@+id/SearchByNameEditText" />
+
+    <EditText
+        android:id="@+id/SearchByNameEditText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:ems="10"
+        android:hint="@string/search_by_name"
+        android:inputType="textPersonName"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/SpinnerLocationItemSearchByName" />
 </android.support.constraint.ConstraintLayout>
