--- a/app/src/main/res/layout/activity_item_list.xml
+++ b/app/src/main/res/layout/activity_item_list.xml
@@ -38,4 +38,17 @@
         android:text="@string/view_item"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/spinnerItemListing" />
+
+    <Button
+        android:id="@+id/ItemListBackButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:onClick="onItemListBackOnPress"
+        android:text="@string/back"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/ViewItemDetailButton"
+        app:layout_constraintTop_toBottomOf="@+id/spinnerItemListing" />
 </android.support.constraint.ConstraintLayout>
