--- a/app/src/main/res/layout/activity_item_search_by_category.xml
+++ b/app/src/main/res/layout/activity_item_search_by_category.xml
@@ -53,7 +53,7 @@
         app:layout_constraintTop_toBottomOf="@+id/ItemSearchByCategoryBackButton" />
 
     <Button
-        android:id="@+id/ViewItemFromSeachByCategoryButton"
+        android:id="@+id/ViewItemFromSearchByCategoryButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -71,7 +71,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="@string/category_colens"
+        android:text="@string/category_colons"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/SpinnerLocationSearchByCategory" />
 
