--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -8,12 +8,12 @@
     tools:context=".controllers.WelcomeActivity">
 
     <Button
-        android:id="@+id/login"
+        android:id="@+id/LoginAdminButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="108dp"
-        android:onClick="onLoginClicked"
-        android:text="@string/login"
+        android:layout_marginStart="16dp"
+        android:onClick="onLoginAdministratorClicked"
+        android:text="@string/login_administrator"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/iRPDescription" />
 
@@ -21,38 +21,35 @@
         android:id="@+id/registration"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="36dp"
+        android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:onClick="onRegistrationClicked"
         android:text="@string/registration"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/login"
-        app:layout_constraintTop_toBottomOf="@+id/iRPDescription" />
+        app:layout_constraintHorizontal_bias="0.219"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/LoginManagerButton" />
 
     <TextView
         android:id="@+id/welcomeText"
         android:layout_width="243dp"
-        android:layout_height="147dp"
+        android:layout_height="135dp"
         android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
         android:fontFamily="@font/holtwood_one_sc"
         android:text="@string/irp"
         android:textSize="100sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/iRPDescription"
-        android:layout_width="wrap_content"
-        android:layout_height="31dp"
-        android:layout_marginStart="8dp"
+        android:layout_width="265dp"
+        android:layout_height="27dp"
         android:layout_marginEnd="8dp"
         android:text="@string/irp_description"
-        android:textSize="20sp"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.507"
+        app:layout_constraintHorizontal_bias="0.015"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/welcomeText" />
 
@@ -60,36 +57,65 @@
         android:id="@+id/LoadDataButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="8dp"
         android:onClick="onLoadDataOnPressed"
         android:text="@string/load_data"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/login" />
+        app:layout_constraintStart_toEndOf="@+id/welcomeText"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/SaveDataButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginStart="24dp"
         android:onClick="onSaveDataOnPressed"
         android:text="@string/save_data"
-        app:layout_constraintStart_toEndOf="@+id/LoadDataButton"
-        app:layout_constraintTop_toBottomOf="@+id/registration" />
+        app:layout_constraintStart_toEndOf="@+id/welcomeText"
+        app:layout_constraintTop_toBottomOf="@+id/LoadDataButton" />
 
     <Button
         android:id="@+id/ClearDataButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="4dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginStart="16dp"
         android:onClick="onClearDataOnPressed"
         android:text="@string/clear_data"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.384"
-        app:layout_constraintStart_toEndOf="@+id/SaveDataButton"
-        app:layout_constraintTop_toBottomOf="@+id/registration" />
+        app:layout_constraintHorizontal_bias="0.07"
+        app:layout_constraintStart_toEndOf="@+id/welcomeText"
+        app:layout_constraintTop_toBottomOf="@+id/SaveDataButton" />
+
+    <Button
+        android:id="@+id/LoginLocalButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:onClick="onLoginLocalEmployeeClicked"
+        android:text="@string/login_localEmployee"
+        app:layout_constraintStart_toEndOf="@+id/LoginAdminButton"
+        app:layout_constraintTop_toBottomOf="@+id/iRPDescription" />
+
+    <Button
+        android:id="@+id/LoginManagerButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:onClick="onLoginManagerClicked"
+        android:text="@string/login_manager"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/LoginAdminButton" />
+
+    <Button
+        android:id="@+id/LoginUserButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:onClick="onLoginUserClicked"
+        android:text="@string/login_user"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.151"
+        app:layout_constraintStart_toEndOf="@+id/LoginManagerButton"
+        app:layout_constraintTop_toBottomOf="@+id/LoginLocalButton" />
 
 </android.support.constraint.ConstraintLayout>
