--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -108,6 +108,8 @@
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/LoginName" />
+        app:layout_constraintTop_toBottomOf="@+id/LoginName"
+        android:importantForAutofill="no"
+        tools:targetApi="o" />
 
 </android.support.constraint.ConstraintLayout>
