--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -86,6 +86,14 @@
         app:layout_constraintStart_toEndOf="@+id/welcomeText"
         app:layout_constraintTop_toBottomOf="@+id/SaveDataButton" />
 
-    
+    <com.facebook.login.widget.LoginButton
+        android:id="@+id/login_button"
+        android:layout_width="wrap_content"
+        android:layout_height="48dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="32dp"
+        app:layout_constraintTop_toBottomOf="@+id/LoginButton"
+        tools:layout_editor_absoluteX="34dp" />
+
 
 </android.support.constraint.ConstraintLayout>
