--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -93,7 +93,8 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="32dp"
         app:layout_constraintTop_toBottomOf="@+id/LoginButton"
-        tools:layout_editor_absoluteX="34dp" />
+        tools:layout_editor_absoluteX="34dp"
+        tools:ignore="MissingConstraints" />
 
 
 </android.support.constraint.ConstraintLayout>
