--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -17,6 +17,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/iRPDescription" />
 
+
+    <Button
+        android:id="@+id/FBButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="onFBLoginClicked"
+        android:text="@string/FBbutton"
+        tools:layout_editor_absoluteX="162dp"
+        tools:layout_editor_absoluteY="406dp" />
+
     <Button
         android:id="@+id/registration"
         android:layout_width="wrap_content"
